c4prj2_input/grade.txt
Grading at Wed Apr  3 06:49:17 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:44:25: error: passing argument 1 of ‘fopen’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   FILE * input = fopen (f, "r");
                         ^
In file included from input.c:2:0:
/usr/include/stdio.h:272:14: note: expected ‘const char * restrict’ but argument is of type ‘FILE * {aka struct _IO_FILE *}’
 extern FILE *fopen (const char *__restrict __filename,
              ^
input.c:47:21: error: format ‘%s’ expects argument of type ‘char *’, but argument 3 has type ‘FILE * {aka struct _IO_FILE *}’ [-Werror=format=]
     fprintf(stderr, "Trying to open %s\n", f);
                     ^
input.c:52:9: error: request for member ‘cards’ in something not a structure or union
   result->cards = NULL;
         ^
input.c:53:9: error: request for member ‘n_cards’ in something not a structure or union
   result->n_cards = 0;
         ^
input.c:58:32: error: expected expression before ‘deck_t’
     deck_t ** result = realloc(deck_t ** result, (result->n_cards+1) * sizeof(*deck_t ** result));
                                ^
input.c:58:24: error: too few arguments to function ‘realloc’
     deck_t ** result = realloc(deck_t ** result, (result->n_cards+1) * sizeof(*deck_t ** result));
                        ^
input.c:62:5: error: ‘n_cards’ undeclared (first use in this function)
     n_cards++;
     ^
input.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
input.c:58:15: error: unused variable ‘result’ [-Werror=unused-variable]
     deck_t ** result = realloc(deck_t ** result, (result->n_cards+1) * sizeof(*deck_t ** result));
               ^
input.c:69:21: error: format ‘%s’ expects argument of type ‘char *’, but argument 3 has type ‘FILE * {aka struct _IO_FILE *}’ [-Werror=format=]
     fprintf(stderr, "Trying to close %s\n", f);
                     ^
input.c:56:7: error: unused variable ‘counter’ [-Werror=unused-variable]
   int counter = 0;
       ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
